DOCS: Trying to generate the serenity report